--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=WITPW
+application.vendor=kali
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +33,27 @@ dist.jar=${dist.dir}/WITPW.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/WITPW
+endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=/home/kali/SoftwareFiles/Libraries/AbsoluteLayout.jar
+file.reference.flatlaf-3.1.1.jar=/home/kali/SoftwareFiles/Libraries/flatlaf-3.1.1.jar
+file.reference.flatlaf-extras-3.1.1.jar=/home/kali/SoftwareFiles/Libraries/flatlaf-extras-3.1.1.jar
+file.reference.jcalendar-1.4.jar=/home/kali/SoftwareFiles/Libraries/jcalendar-1.4.jar
+file.reference.KControls-2.0.jar=/home/kali/SoftwareFiles/Libraries/KControls-2.0.jar
+file.reference.mysql-connector-java-5.1.23.jar=/home/kali/SoftwareFiles/Libraries/mysql-connector-java-5.1.23.jar
+file.reference.swing-crazy-panel-1.0.0.jar=/home/kali/SoftwareFiles/Libraries/swing-crazy-panel-1.0.0.jar
+file.reference.TimingFramework-0.55.jar=/home/kali/SoftwareFiles/Libraries/TimingFramework-0.55.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.KControls-2.0.jar}:\
+    ${file.reference.TimingFramework-0.55.jar}:\
+    ${file.reference.flatlaf-3.1.1.jar}:\
+    ${file.reference.flatlaf-extras-3.1.1.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23.jar}:\
+    ${file.reference.swing-crazy-panel-1.0.0.jar}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
